--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,14 +8,14 @@
             <div><img src="{{asset('img/avatar.png')}}" alt="avatar" style="width: 5em; height: auto; border-radius: 50%; margin-right: 2em;" class="btn-shadow"></div>
             <div style="color: #4f4f4f;">
                 <h2><span>{{ 'Welcome,'|trans }}</span> <span style="font-weight: 400">{{app.user.username}}</span></h2>
-                <div class="lead">{{ 'On your personnal dashboard'|trans }}</div>
+                <div class="lead">{{ 'On your personal dashboard'|trans }}</div>
             </div>
         </div>
         <hr style="width: 50%">
         {% if is_granted("ROLE_GOE") %}
-        <div class="row d-flex align-items-stretch justify-space-between w-100">
+        <div class="row d-flex align-items-stretch justify-content-between w-100">
             
-            <div class="col-md-4 card shadow-1 hoverable-1 rounded-3 white card-index">
+            <div class="col card shadow-1 hoverable-1 rounded-3 white card-index mx-1">
                 <a href="{{path('software')}}">
                 <div class="card-body">
                 <h4 class="text-nowrap">{{ 'Softwares'|trans }}</h4>
@@ -25,7 +25,7 @@
             </div>
             
             
-            <div class="col-md-4 card shadow-1 hoverable-1 rounded-3 white card-index">
+            <div class="col card shadow-1 hoverable-1 rounded-3 white card-index mx-1">
                 <a href="{{path('device')}}">
                     <div class="card-body">
                     <h4 class="text-nowrap">{{ 'Devices'|trans }}</h4>
@@ -34,8 +34,8 @@
                 </a>   
             </div>
             
-            
-            <div class="col-md-4 card shadow-1 hoverable-1 rounded-3 white card-index">
+            {% if is_granted("ROLE_ADMIN") %}
+            <div class="col card shadow-1 hoverable-1 rounded-3 white card-index mx-1">
             <a href="{{path('dashboard')}}">
                 <div class="card-body">
                 <h4 class="text-nowrap">{{ 'Dashboard'|trans }}</h4>
@@ -43,6 +43,7 @@
                 </div>
             </a>
             </div>
+            {% endif %}
             
         </div>
         
