--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -99,8 +99,8 @@
                                                 </td>
                                                 <td class="text-center">
                                                     <div class="input-group d-flex flex-nowrap text-break overflow-hidden comment-update-form">
-                                                        <input class="comment_update_input border border-0" type="text" name="nm" value="{{soft.updateComment}}">
-                                                        <button class="comment_update_button btn btn-outline-dark" type="button" name="name" value="" data-id="{{soft.id}}"><i class="fa-solid fa-check"></i></button>
+                                                        <input class="comment_update_input border border-0" style="background-color:#f1874144;" type="text" name="nm" value="{{soft.updateComment}}">
+                                                        <button class="comment_update_button btn btn-dark border-0" type="button" name="name" value="" data-id="{{soft.id}}"><i class="fa-solid fa-check"></i></button>
                                                     </div>
                                                 </td>
                                                 {% endif %}
