--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -46,7 +46,7 @@ $color5 : #100c08;
 html {
     width: 100%;
     //min-height: 100%;
-    //min-height: 100vh;
+    min-height: 100vh;
     //min-width: fit-content;
     height: fit-content;
     align-items: center;
@@ -67,7 +67,7 @@ body {
     font-style: normal;
     font-weight: 400;
     //min-width: fit-content;
-    //min-height: 100vh;
+    min-height: 100vh;
     //height: 100%;
     //height: 100vh;
     //min-height: 100%;
@@ -79,6 +79,9 @@ body {
     margin: 0;
     padding: 0 !important;
     background-color: $color3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .container {
@@ -171,10 +174,17 @@ a {
     text-align: center;
     //position: fixed;
     //bottom: 0;
-    padding-top: 1em;
+    padding: 0;
     display: flex;
     flex-direction: column;
     font-size: 10px;
+    background-color: #000000c8;
+}
+
+.btn-icon {
+    width: 3em;
+    display: flex;
+    justify-content: center;
 }
 
 /*
@@ -294,6 +304,9 @@ a {
     }
     #navbar-logo{
         transition: 0.4s;
+    }
+    .dropdown-menu {
+        position:absolute;
     }
 }
 
