--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ 'Winback Interface | Device'|trans }}{% endblock %}
 
 {% block content %}
-    <div class="container d-flex flex-column justify-content-between align-items-center">
+    <div class="d-flex flex-column justify-content-between align-items-center mx-0 px-0 w-100">
             <div class="row w-100 h-100 mt-4">
                 <div class="col-md-3">
                     {% include "device/_filter.html.twig" %}
@@ -21,7 +21,7 @@
                         <div class="p-3 my-2 rounded-2 alert alert-success">{{ message }}</div>
                     {% endfor %}
                        
-                    <div id="listDevice" class="w-100">
+                    <div id="listDevice" class="w-100" style="margin-bottom: 1em;">
                         <div id="listDeviceTable" class="table-responsive w-100 h-100">
                             <table class="table table-striped table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true" style="height: 100px;">
                                 
