--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,21 +4,23 @@
 
 {% block content %}
     <div class="container row d-flex justify-content-center align-items-center p-5">
+        <!--
         <div class="col-md-9 col-lg-6 col-xl-5 p-5 d-flex justify-content-center">
-        <!--<div class="col-md-6 p-5 d-flex justify-content-center">-->
         <img src="{{ asset('img/winback-logo.webp') }}" class="img-fluid" alt="">
         </div>
-
+        -->
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <!--<div class="col-md-6">-->
             {% for flash_error in app.flashes('verify_email_error') %}
                 <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
             {% endfor %}
 
-            {{ form_start(registrationForm, {'attr': {'class': 'd-flex flex-column align-items-center justify-content-around mt-2 mb-2 mt-sm-2 mb-sm-2 pt-1 pb-sm-5 pb-3 pt-sm-2 px-sm-5 px-3 login'}}) }}
+            {{ form_start(registrationForm, {'attr': {'class': 'text-center d-flex flex-column align-items-center justify-content-around login'}}) }}
+                <div class="w-50" style="margin-top: 1em; padding-bottom: 2em;">
+
                 <span class="fa-stack fa-3x" style="position: relative; top: -40px;">
                     <i class="fa-solid fa-circle fa-stack-2x" style="color: #f18841;"></i>
-                    <i class="fa-regular fa-user fa-stack-1x fa-inverse"></i>
+                    <i class="fa-regular fa-user fa-stack-1x fa-inverse" style="text-shadow: 2px 2px 2px rgba(0,0,0,0.5);"></i>
                 </span>
                 <h2 class="mb-sm-3">{{ 'Register'|trans }}</h2>
                 <div class="form-outline">
@@ -48,17 +50,19 @@
                         {{ form_row(registrationForm.password.second, {attr: {placeholder: ( 'Confirm Password'|trans ), style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;'}}) }}
                     </div>
                 </div>
-                {{ form_row(registrationForm.agreeTerms, {attr: {label: ( 'Agree terms'|trans ), style: 'margin-bottom: 0;'}}) }}
+                <div class="d-flex justify-content-center flex-nowrap">{{ form_row(registrationForm.agreeTerms, {attr: {label: ( 'Agree terms'|trans ), style: 'margin-bottom: 0;'}}) }}</div>
 
-                <button type="submit" class="btn txt-white bg-orange btn-outline-orange w-100 h-auto">{{ 'Register'|trans }}</button>
+                <button type="submit" class="btn txt-white bg-orange btn-outline-orange w-100 h-auto">{{ 'Register'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></button>
 
                 <div class="divider d-flex align-items-center my-3">
                     {#<p class="text-center fw-bold mx-3 mb-0">{{ 'Or'|trans }}</p>#}
                 </div>
                 <div class="d-flex justify-content-around align-items-center w-100 p-0 flex-wrap">
                     <p class="mb-1 text-nowrap">{{ 'Already registered ?'|trans }}</p>
-                    <a class="btn btn-secondary txt-white mb-1" href="{{ path('app_login') }}">{{ 'Sign In'|trans }}</a>
+                    <a class="btn btn-secondary txt-white mb-1 w-100" href="{{ path('app_login') }}">{{ 'Sign In'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
                 </div>
+                </div>
+
             {{ form_end(registrationForm) }}
         </div>
 
