--- a/templates/sn.html.twig
+++ b/templates/sn.html.twig
@@ -20,7 +20,7 @@
                                     <tr class="h-100 w-100 align-middle" id="">
                                         <th scope="col" class="h-100 p-0">
                                             <div class="h-100 d-flex justify-content-between input-group flex-nowrap text-center align-items-center ps-2">
-                                                Serial Number
+                                                <div class="w-100">Serial Number</div>
                                                 <span class="btn btn-light text-dark h-100 p-1" style="border-radius: 0;" type="button"><i class="h-100 fa-solid fa-arrow-up-a-z d-flex align-items-center" id="snSort" onclick=sortTable(1)></i></span>
                                             </div>
                                         
