--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,16 +19,24 @@
   background-color: #000000;
 }
 
-@media (max-width: 500px) {
-  html {
-    height: 100vh;
-  }
+/*
+@media (max-width: 500px) { 
+
+    html {
+        height: 100vh;
+    }
+
 }
-@media (max-width: 500px) {
-  body {
-    height: 100vh;
-  }
+*/
+/*
+@media (max-width: 500px) { 
+
+    body {
+        height: 100vh;
+    }
+
 }
+*/
 html {
   width: 100%;
   min-height: 100vh;
@@ -71,6 +79,7 @@ h1, h2 {
 }
 
 main {
+  flex: 1;
   width: 100%;
   height: 100%;
   display: flex;
