--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -26,7 +26,7 @@ $color5 : #100c08;
 .bg-black {
     background-color: #000000;
 }
-
+/*
 @media (max-width: 500px) { 
     
     html {
@@ -34,7 +34,8 @@ $color5 : #100c08;
     }
     
 }
-
+*/
+/*
 @media (max-width: 500px) { 
     
     body {
@@ -42,7 +43,7 @@ $color5 : #100c08;
     }
     
 }
-
+*/
 html {
     width: 100%;
     //min-height: 100%;
@@ -81,7 +82,7 @@ body {
     background-color: $color3;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content:space-between;
 }
 
 .container {
@@ -102,6 +103,7 @@ h1, h2 {
 }
 
 main {
+    flex: 1;
     width: 100%;
     //min-height: 100vh;
     //height: fit-content;
