--- a/templates/software.html.twig
+++ b/templates/software.html.twig
@@ -49,7 +49,7 @@
                                 -->
                                 {{ family.name }}
                             </h2>
-                            <div class="responsive-table accordion-collapse collapse show overflow-auto" id="accordionCollapse_{{ family.name }}" aria-labelledby="accordionHeading_{{ family.name }}" data-bs-parent="#accordionSoftware">
+                            <div class="accordion-collapse collapse show responsive-table overflow-auto" id="accordionCollapse_{{ family.name }}" aria-labelledby="accordionHeading_{{ family.name }}" data-bs-parent="#accordionSoftware">
                                 
                                 <table class="table table-striped table-hover" id="softTable_{{ family.name }}">
                                         <thead class="accordion-item">
