--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -67,8 +67,8 @@
                                         <th id='test_zone_0'>
                                             {% if is_granted("ROLE_SAV")%}
                                                 {{ form_start(versionform) }}
-                                                    <div class="input-group d-flex flex-nowrap">
-                                                    {{form_row(versionform.versionUpload, {attr: { style: 'border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0; width: 3em;'}})}}
+                                                    <div class="input-group d-flex flex-nowrap align-items-stretch justify-content-center">
+                                                    {{form_row(versionform.versionUpload, {attr: { style: 'border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0; width: 3em; height: 100%;'}})}}
                                                     <button type="submit" class="text-center btn bg-orange btn-outline-orange mb-3" style="width: fit-content"><i class="fa-solid fa-check fa-2xs"></i></button>
                                                     </div>
                                                 {{ form_end(versionform) }}
