--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -52,14 +52,14 @@
                 </div>
                 <div class="d-flex justify-content-center flex-nowrap">{{ form_row(registrationForm.agreeTerms, {attr: {label: ( 'Agree terms'|trans ), style: 'margin-bottom: 0;'}}) }}</div>
 
-                <button type="submit" class="btn txt-white bg-orange btn-outline-orange w-100 h-auto">{{ 'Register'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></button>
+                <button type="submit" class="btn btn-justify txt-white bg-orange btn-outline-orange w-100 h-auto">{{ 'Register'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></button>
 
                 <div class="divider d-flex align-items-center my-3">
                     {#<p class="text-center fw-bold mx-3 mb-0">{{ 'Or'|trans }}</p>#}
                 </div>
                 <div class="d-flex justify-content-around align-items-center w-100 p-0 flex-wrap">
                     <p class="mb-1 text-nowrap">{{ 'Already registered ?'|trans }}</p>
-                    <a class="btn btn-secondary txt-white mb-1 w-100" href="{{ path('app_login') }}">{{ 'Sign In'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
+                    <a class="btn btn-justify btn-secondary txt-white mb-1 w-100" href="{{ path('app_login') }}">{{ 'Sign In'|trans }} <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
                 </div>
                 </div>
 
