--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -65,7 +65,7 @@
                 </div>
                 
 
-                <button class="btn bg-orange btn-outline-orange mt-1 mb-1 mt-sm-2 mb-sm-2 w-100" type="submit">
+                <button class="btn btn-justify bg-orange btn-outline-orange mt-1 mb-1 mt-sm-2 mb-sm-2 w-100" type="submit">
                 {{ 'Sign in'|trans }}
                 <svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg>
                 </button>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="d-flex justify-content-around align-items-center w-100 p-0 flex-wrap">
                     <p class="mb-0 text-break text-nowrap mb-1">{{ 'Not registered yet ?'|trans }}</p>
-                    <a class="btn btn-secondary txt-white text-break text-nowrap mb-1 w-100" href="{{ path('app_register') }}">{{ 'Sign Up'|trans }}<svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
+                    <a class="btn btn-justify btn-secondary txt-white text-break text-nowrap mb-1 w-100" href="{{ path('app_register') }}">{{ 'Sign Up'|trans }}<svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg></a>
                 </div>
             </div>
 
